tests/pass/func.ct
def main: long {
    final y = x;
    return y();
}

def x: long {
    return 200;
}