tests/fail/scope.ct
def x(): void {
    var i = 0;
    {
        var y = a;
    }
    var a = i;
}
